[gd_scene load_steps=4 format=3 uid="uid://b5flyya5ffm4m"]

[ext_resource type="Script" path="res://singletons/level.gd" id="1_245p2"]
[ext_resource type="Texture2D" uid="uid://w5s084g1elw6" path="res://assets/textures/message_box.png" id="2_bifih"]
[ext_resource type="FontFile" uid="uid://8f1he4kx3v4l" path="res://assets/fonts/jua/Jua-Regular.ttf" id="3_iss0d"]

[node name="Level" type="Node"]
script = ExtResource("1_245p2")

[node name="Game" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Game"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HBoxContainer" parent="Game/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RealWorldContainer" type="Control" parent="Game/Control/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="Game/Control/HSplitContainer/RealWorldContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
stretch = true

[node name="RealWorldViewport" type="SubViewport" parent="Game/Control/HSplitContainer/RealWorldContainer/SubViewportContainer"]
unique_name_in_owner = true
own_world_3d = true
handle_input_locally = false
size = Vector2i(574, 648)
render_target_update_mode = 4

[node name="RealLoadScreen" type="ColorRect" parent="Game/Control/HSplitContainer/RealWorldContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="RealProgressBar" type="ProgressBar" parent="Game/Control/HSplitContainer/RealWorldContainer/RealLoadScreen"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2

[node name="DreamWorldContainer" type="Control" parent="Game/Control/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="Game/Control/HSplitContainer/DreamWorldContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
stretch = true

[node name="DreamWorldViewport" type="SubViewport" parent="Game/Control/HSplitContainer/DreamWorldContainer/SubViewportContainer"]
unique_name_in_owner = true
own_world_3d = true
handle_input_locally = false
size = Vector2i(574, 648)
render_target_update_mode = 4

[node name="DreamLoadScreen" type="ColorRect" parent="Game/Control/HSplitContainer/DreamWorldContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="DreamProgressBar" type="ProgressBar" parent="Game/Control/HSplitContainer/DreamWorldContainer/DreamLoadScreen"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MessageBox" type="TextureRect" parent="UI/Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -260.0
offset_right = 400.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_bifih")
stretch_mode = 4

[node name="TextMargin" type="MarginContainer" parent="UI/Control/MessageBox"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 30

[node name="Text" type="Label" parent="UI/Control/MessageBox/TextMargin"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.423529, 0.423529, 0.423529, 1)
theme_override_fonts/font = ExtResource("3_iss0d")
theme_override_font_sizes/font_size = 32
text = "Text"
autowrap_mode = 3
clip_text = true
visible_ratio = -0.25

[node name="AuthorMargin" type="MarginContainer" parent="UI/Control/MessageBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_right = 0.7
anchor_bottom = 0.25
offset_top = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 0

[node name="Author" type="Label" parent="UI/Control/MessageBox/AuthorMargin"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.423529, 0.423529, 0.423529, 1)
theme_override_fonts/font = ExtResource("3_iss0d")
theme_override_font_sizes/font_size = 32
text = "Author
"
horizontal_alignment = 1
autowrap_mode = 3
clip_text = true
